fixed spacing on header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,7 @@
   width: 100vw;
 }
 
+.chat-container{
+  width: 100vw;
+}
+
