--- a/client/src/Comps/ChatBox/ChatBox.css
+++ b/client/src/Comps/ChatBox/ChatBox.css
@@ -33,7 +33,7 @@
   border-radius: 20px;
   padding: 10px;
   margin: 5px 0;
-  max-width: 70%;
+  max-width: 50%;
   word-wrap: break-word;
 }
 
