--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,9 +25,8 @@ a:hover {
 
 body {
   margin: 0;
+  margin-top: 12vh;
   padding: 0;
-  display: flex;
-  place-items: center;
   min-width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
